--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "postinstall": "install-app-deps",
     "start": "electron .",
     "pack": "electron-builder --dir",
-    "dist": "electron-builder"
+    "dist": "electron-builder",
+    "rmad": "rm -f -r %APPDATA%/multi-export"
   },
   "repository": "https://github.com/sergey-untilov/multi-export",
   "keywords": [
