--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "electron .",
     "pack": "electron-builder --dir",
     "dist": "electron-builder",
-    "rmad": "rm -f -r %APPDATA%/multi-export"
+    "rmad": "rm -f -r %APPDATA%/multi-export",
+    "test": "jest"
   },
   "repository": "https://github.com/sergey-untilov/multi-export",
   "keywords": [
@@ -28,16 +29,17 @@
       "buildResources": "build"
     },
     "extraFiles": [
-          {
-            "from": "assets",
-            "to": "assets"
-          }
-        ]
+      {
+        "from": "assets",
+        "to": "assets"
+      }
+    ]
   },
   "devDependencies": {
     "devtron": "^1.4.0",
     "electron": "^7.1.2",
     "electron-builder": "^21.2.0",
+    "jest": "^24.9.0",
     "standard": "^14.3.1"
   },
   "dependencies": {
