--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "dependencies": {
     "electron-reload": "^1.5.0",
     "electron-store": "^5.1.0",
+    "iconv": "^2.3.5",
     "spectre.css": "^0.5.8"
   }
 }
