--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "pack": "electron-builder --dir",
     "dist": "electron-builder",
     "rmad": "rm -f -r %APPDATA%/multi-export",
-    "test": "jest"
+    "test": "jest",
+    "lint": "standard"
   },
   "repository": "https://github.com/sergey-untilov/multi-export",
   "keywords": [
@@ -44,6 +45,7 @@
     "standard": "^14.3.1"
   },
   "dependencies": {
+    "archiver": "^3.1.1",
     "electron-reload": "^1.5.0",
     "electron-store": "^5.1.0",
     "iconv": "^2.3.5",
