--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "electron-reload": "^1.5.0",
     "electron-store": "^5.1.0",
     "iconv": "^2.3.5",
+    "iconv-lite": "^0.5.0",
     "mssql": "^6.0.1",
     "node-sass": "^4.13.0",
     "sass": "^1.24.0",
