--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "electron .",
     "pack": "electron-builder --dir",
     "dist": "electron-builder",
+    "distw": "electron-builder -w --ia32",
     "rmad": "rm -f -r %APPDATA%/multi-export",
     "test": "jest",
     "lint": "standard",
