--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "multi-export",
-  "version": "0.1.0",
-  "description": "Multi export for import into A5 DB",
+  "version": "0.2.0",
+  "description": "Multi export for import into an A5 DB",
   "main": "main.js",
   "scripts": {
     "postinstall": "install-app-deps",
