--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "postinstall": "install-app-deps",
     "start": "electron .",
     "pack": "electron-builder --dir",
-    "dist": "electron-builder",
-    "distw": "electron-builder -w --ia32",
+    "dist": "electron-builder -w --ia32",
     "rmad": "rm -f -r %APPDATA%/multi-export",
     "test": "jest",
     "lint": "standard",
