--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "iconv": "^2.3.5",
     "iconv-lite": "^0.5.0",
     "mssql": "^6.0.1",
+    "node-dbf": "^0.4.0",
     "node-sass": "^4.13.0",
     "sass": "^1.24.0",
     "spectre.css": "^0.5.8"
