--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "multi-export",
-  "version": "0.2.33",
+  "version": "0.2.34",
   "description": "Multi export for import into an A5 DB",
   "main": "main.js",
   "scripts": {
@@ -47,12 +47,13 @@
   },
   "dependencies": {
     "archiver": "^3.1.1",
+    "dbffile": "^1.4.3",
     "electron-reload": "^1.5.0",
     "electron-store": "^5.1.0",
     "iconv": "^2.3.5",
-    "iconv-lite": "^0.5.0",
+    "iconv-lite": "^0.5.2",
     "mssql": "^6.0.1",
-    "node-sass": "^4.13.0",
+    "node-sass": "^4.14.1",
     "sass": "^1.24.0",
     "spectre.css": "^0.5.8",
     "yadbf": "^3.2.3"
