--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
     "iconv-lite": "^0.5.2",
     "mssql": "^6.0.1",
     "node-sass": "^4.14.1",
+    "pg": "^8.7.1",
+    "pg-query-stream": "^4.2.1",
     "sass": "^1.24.0",
     "spectre.css": "^0.5.8",
     "yadbf": "^3.2.3"
