--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "standard": "^14.3.1"
   },
   "dependencies": {
+    "JSONStream": "^1.3.5",
     "archiver": "^3.1.1",
     "dbffile": "^1.4.3",
     "electron-reload": "^1.5.0",
