--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,7 @@
     },
     "rules": {
         "semi": ["error", "never"],
-        "quotes": ["error", "single"],
+        // "quotes": ["error", "single"],
         "indent": ["error", 4],
         "camelcase": ["off"]
     },
