--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,7 +25,7 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm i --g --production windows-build-tools
+    - run: npm install --global --production windows-build-tools --vs2015
     - run: yarn
     - run: yarn test
     - run: yarn dist
