--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,12 +20,21 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout
+      uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm install --global --production windows-build-tools --vs2015
-    - run: yarn
-    - run: yarn test
-    - run: yarn dist
+    - name: Install packages
+      uses: borales/actions-yarn@v4
+      with:
+        cmd: install # will run `yarn install` command
+    - name: Run tests
+      uses: borales/actions-yarn@v4
+      with:
+        cmd: test # will run `yarn test` command
+    - name: Build executable
+      uses: borales/actions-yarn@v4
+      with:
+        cmd: dist # will run `yarn dist` command
