--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -10,9 +10,42 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
+  build_windows:
+
+    name: Build for Windows
 
     runs-on: windows-latest
+
+    strategy:
+      matrix:
+        node-version: [14.17.6]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v2
+      with:
+        node-version: ${{ matrix.node-version }}
+    - name: Install packages
+      uses: borales/actions-yarn@v4
+      with:
+        cmd: install # will run `yarn install` command
+    - name: Run tests
+      uses: borales/actions-yarn@v4
+      with:
+        cmd: test # will run `yarn test` command
+    - name: Build executable
+      uses: borales/actions-yarn@v4
+      with:
+        cmd: dist # will run `yarn dist` command
+
+  build_ubuntu:
+
+    name: Build for ubuntu
+
+    runs-on: ubuntu-20.04
 
     strategy:
       matrix:
