--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -60,6 +60,6 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm install
-    - run: npm test
+    - run: npm ci
+    - run: npm run test
     - run: npm run dist
