--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,11 +11,10 @@ on:
 
 jobs:
   build_windows:
-    if: ${{ false }}  # disable for now
 
     name: Build for Windows
 
-    runs-on: windows-latest
+    runs-on: windows-2019
 
     strategy:
       matrix:
@@ -42,24 +41,3 @@ jobs:
       with:
         cmd: dist # will run `yarn dist` command
 
-  build_ubuntu:
-
-    name: Build for Ubuntu
-
-    runs-on: ubuntu-20.04
-
-    strategy:
-      matrix:
-        node-version: [14.17.6]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2
-      with:
-        node-version: ${{ matrix.node-version }}
-    - run: npm install
-    - run: npm run test
-    - run: npm run dist
