--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -44,6 +44,6 @@ jobs:
     - name: Upload to Google Drive
       uses: willo32/google-drive-upload-action@v1
       with:
-        target: dist\\multi-export.exe
+        target: "dist/multi-export.exe"
         credentials: ${{ secrets.google_drive_key }}
-        parent_folder_id: 11c8HZv5hzv3u0xsF8NN3OAd92KyPLYqf
+        parent_folder_id: "11c8HZv5hzv3u0xsF8NN3OAd92KyPLYqf"
