Disable Google Drive upload

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -48,10 +48,10 @@ jobs:
 #        credentials: ${{ secrets.google_drive_key }}
 #        parent_folder_id: "11c8HZv5hzv3u0xsF8NN3OAd92KyPLYqf"
 
-    - name: Upload to Google Drive
-      uses: adityak74/google-drive-upload-git-action@main
-      with:
-        credentials: ${{ secrets.google_drive_key }}
-        filename: "dist/multi-export.exe"
-        folderId: "11c8HZv5hzv3u0xsF8NN3OAd92KyPLYqf"
-        overwrite: "true"
+    # - name: Upload to Google Drive
+    #   uses: adityak74/google-drive-upload-git-action@main
+    #   with:
+    #     credentials: ${{ secrets.google_drive_key }}
+    #     filename: "dist/multi-export.exe"
+    #     folderId: "11c8HZv5hzv3u0xsF8NN3OAd92KyPLYqf"
+    #     overwrite: "true"
