--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "multi-export",
-  "version": "1.6.15",
-  "description": "Multi export for import into an A5 DB",
+  "version": "2.0.0",
+  "description": "Multi export for import into A5 [ERP, HRMIS] databases",
   "main": "main.js",
   "scripts": {
     "postinstall": "install-app-deps",
@@ -17,13 +17,13 @@
     "lint": "standard",
     "scss": "sass .\\multi-export.scss .\\multi-export.css"
   },
-  "repository": "https://github.com/sergey-untilov/multi-export",
+  "repository": "https://github.com/serhii-untilov/multi-export",
   "keywords": [
     "Electron",
     "export",
     "A5"
   ],
-  "author": "Uncle Zeppelin",
+  "author": "Serhii Untilov",
   "license": "MIT",
   "build": {
     "appId": "multi-export",
@@ -42,7 +42,6 @@
     ]
   },
   "devDependencies": {
-    "devtron": "^1.4.0",
     "dotenv": "^8.2.0",
     "electron": "^9.4.0",
     "electron-builder": "^22.2.0",
@@ -56,15 +55,12 @@
     "standard": "^14.3.1"
   },
   "dependencies": {
-    "JSONStream": "^1.3.5",
     "archiver": "^3.1.1",
     "dbffile": "^1.4.3",
     "electron-reload": "^1.5.0",
     "electron-store": "^5.1.0",
-    "iconv": "^2.3.5",
     "iconv-lite": "^0.5.2",
     "mssql": "^6.0.1",
-    "node-sass": "^4.14.1",
     "pg": "^8.7.1",
     "pg-query-stream": "^4.2.1",
     "sass": "^1.24.0",
