--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,6 @@
     "eslint.validate": ["javascript"],
     "prettier.requireConfig": true,
     "editor.formatOnPaste": true,
-    "editor.formatOnType": true
+    "editor.formatOnType": true,
+    "cSpell.words": ["Ispro", "oracledb"]
 }
