chore: query tuner

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "start": "electron .",
         "pack": "electron-builder --dir",
         "dist": "run-script-os",
-        "dist:win32": "electron-builder -w nsis:x64",
+        "dist:win32": "electron-builder -w --x64",
         "dist:linux": "electron-builder -l --x64",
         "rmad": "run-script-os",
         "rmad:win32": "rm -f -r %APPDATA%/multi-export",
@@ -74,7 +74,7 @@
         "electron-store": "^7.0.3",
         "iconv-lite": "^0.6.3",
         "mssql": "^11.0.1",
-        "oracledb": "^6.8.0",
+        "oracledb": "https://github.com/oracle/node-oracledb/releases/download/v6.8.0/oracledb-src-6.8.0.tgz",
         "pg": "^8.14.1",
         "pg-query-stream": "^4.8.1",
         "sass": "^1.86.3",
